src/components/common/LeftSideBar/LeftSideBar.module.css
/* .leftMenuBox :global .ant-layout .ant-layout-sider-trigger {
  position: fixed;
  width: 24px !important;
  top: 3px;
  z-index: 1;
  height: 48px;
  color: #ea2929;
  line-height: 48px;
  text-align: center;
  background: #ffffff;
  cursor: pointer;
  transition: all 0.2s;
} */

/* .menuTitle {
  font-size: 16px;
  margin-top: -10px;
} */

.menuIcon {
  font-size: 22px !important;
}

.homeIcon {
  display: flex;
  align-items: center;
  color: #000000;
  /* margin-top: 12px; */
  margin-bottom: 4px;
  height: 40px !important;
  width: 100%;
  font-size: 16px;
  font-weight: normal;
}

.homeIcon span {
  padding-right: 8px;
}

.homeIcon:hover {
  color: #FF3E5B;
}

:global .ant-layout-sider-zero-width-trigger {
  display: none !important;
}

.leftMenuBox {
  height: 100vh;
  position: -webkit-sticky !important;
  position: sticky !important;
  top: 0 !important;
  /* box-shadow: -10px 5px 10px 10px rgb(0 0 0 / 25%), 0 10px 10px 5px rgb(0 0 0 / 22%) !important; */
  /* box-shadow: 0 0 #0000, 0 0 #0000, 0 0 3px rgba(0, 0, 0, .2) !important;
  background-color: #f4f4f4 !important; */
  z-index: 99 !important;
}

.leftMenuBoxLight {
  background-color: #f4f4f4 !important;
}

.leftMenuBoxDark {
  background-color: #242424 !important;
}

.leftMenuBox li.subMenuParent {
  min-height: 40px;
}

.leftMenuBox li.subMenuParent:hover {
  background: none !important;
}

.closeButton {
  font-size: 30px;
  padding-top: 12px;
  text-align: right;
  color: #ea2929;
  cursor: pointer;
}

:global .ant-menu-title-content a {
  color: #000000 !important;
  display: block;
  text-overflow: ellipsis;
  overflow: hidden;
}

:global .ant-menu-title-content a:hover {
  color: #ea2929 !important;
}

:global .ant-menu-light .ant-menu-submenu-title:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected) {
  color: #ea2929 !important;
}

:global .ant-menu-light:not(.ant-menu-horizontal) .ant-menu-submenu-title:hover {
  background-color: transparent !important;
}

/* :global .ant-input-group-wrapper {
  vertical-align: inherit;
} */

:global .ant-layout .ant-layout-sider-trigger {
  position: absolute;
  width: 0px !important;
  top: 23px;
  z-index: 1;
  /* height: 48px; */
  color: #ea2929;
  font-size: 18px;
  /* line-height: 48px; */
  text-align: center;
  /* background: #f4f4f4; */
  cursor: pointer;
  transition: all 0.2s;
}

/* icon for collapse position when not collapsed */
:global .ant-layout .ant-layout-sider-trigger .anticon-left {
  position: absolute;
  left: 208px;
}

/* icon for collapse position when collapsed */
:global .ant-layout .ant-layout-sider-trigger .anticon-right {
  position: absolute;
  left: 32px;
}

/* background color of the menu list & sub-menu list */
:global .ant-menu-light {
  background-color: transparent;
}

/* :global .ant-menu-light.ant-menu-inline .ant-menu-sub.ant-menu-inline {
  background-color: transparent;
  padding-left: 22px !important;
} */

/* font-family & size for sub-menu in left-menu text */
:global .ant-menu .ant-menu-sub {
  font-size: 14px;
  background-color: #f4f4f4 !important;
}

:global .ant-menu .ant-menu-sub li {
  padding-left: 22px !important;
}

:global .ant-menu .ant-menu-item .ant-menu-item-icon+span,
:global .ant-menu .ant-menu-submenu-title .ant-menu-item-icon+span,
:global .ant-menu .ant-menu-item .anticon+span,
:global .ant-menu .ant-menu-submenu-title .anticon+span {
  padding-left: 20px !important;
}

/* :global .ant-menu .ant-menu-item .ant-menu-item-icon+span:hover,
:global .ant-menu .ant-menu-submenu-title .ant-menu-item-icon+span:hover,
:global .ant-menu .ant-menu-item .anticon+span:hover,
:global .ant-menu .ant-menu-submenu-title .anticon+span:hover {
  background: #f4f4f4 !important;
  color: #ea2929 !important;
  width: 100%;
} */

/* :global .ant-menu-inline.ant-menu-root .ant-menu-item>.ant-menu-title-content,
:global .ant-menu-inline.ant-menu-root .ant-menu-submenu-title>.ant-menu-title-content {
  padding-left: 16px;
}

:global .ant-menu-inline.ant-menu-root li.subMenuParent>.ant-menu-submenu-title>.ant-menu-title-content {
  padding-left: 16px;
}

:global .ant-menu-inline.ant-menu-root .ant-menu-item>.ant-menu-title-content {
  padding-left: 16px;
} */

/* :global .ant-menu-inline.ant-menu-root .subMenuItem>span:hover {
  background: #ffffff !important;
  color: #000000;
} */

/* changes on menu list items on hover */
/* :global .ant-menu-submenu-title:hover {
  background-color: transparent !important;
  color: #ea2929 !important;
} */

:global .ant-menu-item:not(.ant-menu-item-selected):hover {
  background-color: #ffffff !important;
  /* color: #000000; */
  border-radius: 4px;
}

/* changes on menu list items on select/visited/focus */
:global .ant-menu-light .ant-menu-item-selected {
  background-color: #ffffff;
}

:global .ant-menu-light.ant-menu-root.ant-menu-inline::-webkit-scrollbar-track,
:global .ant-menu-light.ant-menu-root.ant-menu-vertical::-webkit-scrollbar-track {
  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
  background-color: #F4F4F4;
}

:global .ant-menu-light.ant-menu-root.ant-menu-inline::-webkit-scrollbar,
:global .ant-menu-light.ant-menu-root.ant-menu-vertical::-webkit-scrollbar {
  width: 5px;
  background-color: #F4F4F4;
}

/* :global .ant-menu-light.ant-menu-root.ant-menu-inline:hover::-webkit-scrollbar,
:global .ant-menu-light.ant-menu-root.ant-menu-vertical:hover::-webkit-scrollbar {
  width: 10px !important;
} */

:global .ant-menu-light.ant-menu-root.ant-menu-inline::-webkit-scrollbar-thumb,
:global .ant-menu-light.ant-menu-root.ant-menu-vertical::-webkit-scrollbar-thumb {
  background-color: rgba(52, 44, 44, 0.34);
  border-radius: 10px;
  /* border: 2px solid ; */
}

/* right border on menu list */
:global .ant-menu-light.ant-menu-root.ant-menu-inline,
:global .ant-menu-light.ant-menu-root.ant-menu-vertical {
  border-inline-end: none;
  overflow-y: scroll;
  max-height: 80vh;
  /* padding: 0px 16px; */
  padding-left: 14px;
  padding-right: 14px;
}
/* ... */

